--- a/requirements.txt
+++ b/requirements.txt
@@ -1,123 +1,16 @@
-alabaster==0.7.12
-anaconda-client==1.7.2
-anaconda-project==0.8.3
-argh==0.26.2
-argon2-cffi @ file:///tmp/build/80754af9/argon2-cffi_1596828493937/work
-asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work
-astroid @ file:///tmp/build/80754af9/astroid_1592495912941/work
-astropy==4.0.2
-async-generator==1.10
-atomicwrites==1.4.0
-attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work
-autopep8 @ file:///tmp/build/80754af9/autopep8_1596578164842/work
-Babel @ file:///tmp/build/80754af9/babel_1605108370292/work
-backcall==0.2.0
-backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4 @ file:///tmp/build/80754af9/beautifulsoup4_1601924105527/work
-bitarray @ file:///tmp/build/80754af9/bitarray_1605065113847/work
-bkcharts==0.2
-bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work
-bokeh @ file:///tmp/build/80754af9/bokeh_1603297833684/work
-boto==2.49.0
-Bottleneck==1.3.2
-brotlipy==0.7.0
-certifi==2020.6.20
-cffi @ file:///tmp/build/80754af9/cffi_1600699146221/work
-chardet==3.0.4
 click==7.1.2
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
-clyent==1.2.2
-colorama @ file:///tmp/build/80754af9/colorama_1603211150991/work
 coloredlogs==15.0
-contextlib2==0.6.0.post1
-cryptography @ file:///tmp/build/80754af9/cryptography_1601046815590/work
-cycler==0.10.0
-Cython @ file:///tmp/build/80754af9/cython_1594831566883/work
-cytoolz==0.11.0
-dask @ file:///tmp/build/80754af9/dask-core_1602083700509/work
-decorator==4.4.2
-defusedxml==0.6.0
-diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
-distributed @ file:///tmp/build/80754af9/distributed_1605066520644/work
-docutils==0.16
-entrypoints==0.3
-et-xmlfile==1.0.1
 fastapi==0.63.0
-urllib3==1.25.11
+h11==0.12.0
+httptools==0.1.1
+humanfriendly==9.1
+pydantic==1.8.1
 python-dotenv==0.16.0
-python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1600278539111/work
-python-language-server @ file:///tmp/build/80754af9/python-language-server_1600454544709/work
-pytz==2020.1
-PyWavelets @ file:///tmp/build/80754af9/pywavelets_1601658317819/work
-pyxdg @ file:///tmp/build/80754af9/pyxdg_1603822279816/work
-PyYAML==5.3.1
-pyzmq==19.0.2
-QDarkStyle==2.8.1
-QtAwesome @ file:///tmp/build/80754af9/qtawesome_1602272867890/work
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1600870028330/work
-QtPy==1.9.0
-regex @ file:///tmp/build/80754af9/regex_1602786672676/work
-requests @ file:///tmp/build/80754af9/requests_1592841827918/work
-rope @ file:///tmp/build/80754af9/rope_1602264064449/work
-Rtree==0.9.4
-ruamel-yaml==0.15.87
-scikit-image==0.17.2
-scikit-learn @ file:///tmp/build/80754af9/scikit-learn_1598376899566/work
-scipy @ file:///tmp/build/80754af9/scipy_1597686649129/work
-seaborn @ file:///tmp/build/80754af9/seaborn_1600553570093/work
-SecretStorage==3.1.2
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-singledispatch @ file:///tmp/build/80754af9/singledispatch_1602523705405/work
-sip==4.19.13
-six @ file:///tmp/build/80754af9/six_1605205327372/work
-snowballstemmer==2.0.0
-sortedcollections==1.2.1
-sortedcontainers==2.2.2
-soupsieve==2.0.1
-Sphinx @ file:///tmp/build/80754af9/sphinx_1597428793432/work
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1597081412696/work
-spyder @ file:///tmp/build/80754af9/spyder_1599056981321/work
-spyder-kernels @ file:///tmp/build/80754af9/spyder-kernels_1599056754858/work
-SQLAlchemy @ file:///tmp/build/80754af9/sqlalchemy_1603397987316/work
+PyYAML==5.4.1
 starlette==0.13.6
-statsmodels @ file:///tmp/build/80754af9/statsmodels_1602280205159/work
-sympy @ file:///tmp/build/80754af9/sympy_1605119542615/work
-tables==3.6.1
-tblib @ file:///tmp/build/80754af9/tblib_1597928476713/work
-terminado==0.9.1
-testpath==0.4.4
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-tifffile==2020.10.1
-toml @ file:///tmp/build/80754af9/toml_1592853716807/work
-toolz @ file:///tmp/build/80754af9/toolz_1601054250827/work
-tornado==6.0.4
-tqdm @ file:///tmp/build/80754af9/tqdm_1602185206534/work
-traitlets @ file:///tmp/build/80754af9/traitlets_1602787416690/work
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1598376058250/work
-ujson @ file:///tmp/build/80754af9/ujson_1602523317881/work
-unicodecsv==0.14.1
-urllib3 @ file:///tmp/build/80754af9/urllib3_1603305693037/work
+typing-extensions==3.7.4.3
 uvicorn==0.13.4
+uvloop==0.15.2
 verboselogs==1.7
-watchdog @ file:///tmp/build/80754af9/watchdog_1593447344699/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
-webencodings==0.5.1
-Werkzeug==1.0.1
-widgetsnbextension==3.5.1
-wrapt==1.11.2
-wurlitzer @ file:///tmp/build/80754af9/wurlitzer_1594753850195/work
-xlrd==1.2.0
-XlsxWriter @ file:///tmp/build/80754af9/xlsxwriter_1602692860603/work
-xlwt==1.3.0
-yapf @ file:///tmp/build/80754af9/yapf_1593528177422/work
-zict==2.0.0
-zipp @ file:///tmp/build/80754af9/zipp_1604001098328/work
-zope.event==4.5.0
-zope.interface @ file:///tmp/build/80754af9/zope.interface_1602002420968/work
+watchgod==0.7
+websockets==8.1
